syntax = "proto3";

option csharp_namespace = "Simson.Chat.gRPC";

package chat;

service Chat {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
  rpc GetUsers (GetUsersRequest) returns (stream User);
  rpc GetStreamMessages(GetStreamMessagesRequest) returns (stream Message);
  rpc Stop (StopRequest) returns (StopResponse);
}

message HealthCheckRequest {

}

message HealthCheckResponse {
	
}

message StopRequest {

}

message StopResponse {
	
}

message GetUsersRequest {

}

message GetStreamMessagesRequest {
  int32 count = 1;
}

message User {
  string name = 1;
}

message Message {
  string date = 1;
  string text = 2;
  string userName = 3;
}
